# FEMTests

./: CMakeLists.txt  EigenCmake.in  ExpatCmake.in  GTestCMake.in  TinyXMLCmake.in
src/: BCReader.cpp  BCReader.h  BoundaryCondition.cpp  BoundaryCondition.h  BoundryCondition.cpp  BoundryCondition.h  CMakeLists.txt  DirichletTypeBC.cpp  DirichletTypeBC.h  KMatrix.cpp  KMatrix.h  KMatrixOneD.cpp  KMatrixOneD.h  MatrixFill.cpp  MatrixFill.h  MatrixFillOneD.cpp  MatrixFillOneD.h  NeumannTypeBC.cpp  NeumannTypeBC.h  OneDFEMSOlver.cpp  OneDFEMSOlver.h  OneDProblemFormulation.cpp  OneDProblemFormulation.h  main.cpp
src/Utility/: SampleProblem.cpp  SampleProblem.h
src/tests/: CMakeLists.txt  DirichletTypeBCTests.cpp  NeumannTypeBCTests.cpp  OneDProblemFormulationTests.cpp  OneDProblemTestData.xml
